resources/hive-stage/hive/hive-controllers-metrics.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    service: hive-controllers
  name: hive-controllers-metrics
spec:
  host: hive-controllers-metrics-hive.c39b.hive-stage.openshiftapps.com
  port:
    targetPort: metrics
  to:
    kind: Service
    name: hive-controllers
    weight: 100
